--- a/maven-external-version-plugin/pom.xml
+++ b/maven-external-version-plugin/pom.xml
@@ -30,8 +30,6 @@
 
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-external-version-plugin</artifactId>
-    <version>0.1.1-SNAPSHOT</version>
-
     <packaging>maven-plugin</packaging>
 
     <dependencies>
@@ -61,12 +59,12 @@
         <dependency>
             <groupId>org.apache.maven.version</groupId>
             <artifactId>external-version-api</artifactId>
-            <version>0.1.1-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven.version</groupId>
             <artifactId>external-version-strategies</artifactId>
-            <version>0.1.1-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
 
     </dependencies>
